<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/ui4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_units_to_and_from"
        android:background="@color/purple"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/from"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/spinnerFrom"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@android:drawable/editbox_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_some_numbers_to_convert"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/inputValue"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:hint="@string/_0_0"
        android:gravity="center"
        android:background="@drawable/textview_highlight"
        android:clickable="true"
        android:focusable="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:paddingTop="10dp" />

    <Spinner
        android:id="@+id/spinnerTo"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@android:drawable/editbox_background" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converted_numbers_are"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="10dp" />


</LinearLayout>
